fluxcd/clusters/pi/prometheus/ingress-prometheus.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress-route
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
      # middlewares:
      #   - name: default-headers
  tls:
    secretName: local-fellowfreak-dev-production-tls
